--- a/project/templates/consumer/add_consumer.html
+++ b/project/templates/consumer/add_consumer.html
@@ -8,10 +8,10 @@
             <input type="text" name="name", id="name" placeholder="Nome" class="form-control">
         </div>
         <div class="col-md-6">
-            <input type="text" name="email" id="email" placeholder="E-mail" class="form-control">
+            <input type="email" name="email" id="email" placeholder="E-mail" class="form-control">
         </div>
         <div class="col-md-6">
-            <input type="text" name="password" id="password" placeholder="Senha" class="form-control">
+            <input type="password" name="password" id="password" placeholder="Senha" class="form-control">
         </div>
     </div>
     <br>
