--- a/project/templates/consumer/edit_consumer.html
+++ b/project/templates/consumer/edit_consumer.html
@@ -16,4 +16,7 @@
         <button type="submit" class="btn btn-block btn-success">Enviar</button>
     </div>
 </form>
+<div class="return">
+    <a href="/consumer">Voltar</a>
+</div>
 {% endblock %}
