--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -6,8 +6,8 @@
 <h5>Selecione uma opção:</h5>
 <div class="menu">
     <ul class="list-group">
-        <li class="list-group-item list-group-item-success"><a href="/consumer">Cadastrar Cliente</a></li>
-        <li class="list-group-item list-group-item-info"><a href="/product">Cadastrar Produto</a></li>
+        <li class="list-group-item"><a href="/consumer">Cadastrar Cliente</a></li>
+        <li class="list-group-item"><a href="/product">Cadastrar Produto</a></li>
     </ul>
 </div>
 {% endblock %}
