--- a/project/templates/product/add_product.html
+++ b/project/templates/product/add_product.html
@@ -25,4 +25,7 @@
         <button type="submit" class="btn btn-block btn-success">Enviar</button>
     </div>
 </form>
+<div class="return">
+    <a href="/product">Voltar</a>
+</div>
 {% endblock %}
