--- a/project/templates/product/product.html
+++ b/project/templates/product/product.html
@@ -37,5 +37,8 @@
             </table>
         </div>
     </div>
+    <div class="return">
+        <a href="/index">Voltar</a>
+    </div>
 </div>
 {% endblock %}
