arrumando o estilo da tabela de produto

--- a/project/templates/consumer/consumer.html
+++ b/project/templates/consumer/consumer.html
@@ -5,7 +5,7 @@
 <div class="container">
     <div class="row">
         <div class="col-xs-12">
-            <a href="/add_consumer">Adicionar Cliente</a>
+            <button class="btn btn-success"><a href="/add_consumer">Adicionar Cliente</a></button>
         </div>
         <div class="col-md-6">
             <table class="table">
@@ -33,7 +33,7 @@
     </div>
 </div>
 <div class="return">
-    <a href="/index">Voltar</a>
+    <button type="button" class="btn btn-dark"><a href="/index">Voltar</a></button>
 </div>
 {% endblock %}
 
