--- a/project/templates/product/edit_product.html
+++ b/project/templates/product/edit_product.html
@@ -17,7 +17,7 @@
             <input type="text" name="players" id="players" placeholder="Nº  jogadores" class="form-control" value="{{ product.players }}" >
         </div>
         <div class="col-md-6">
-            <input type="text" name="age" id="age" placeholder="E-mail" class="form-control" value="{{ product.age }}" >
+            <input type="text" name="age" id="age" placeholder="Faixa etária" class="form-control" value="{{ product.age }}" >
         </div>
     </div>
     <br>
