--- a/project/templates/product/product.html
+++ b/project/templates/product/product.html
@@ -5,7 +5,7 @@
 <div class="container">
     <div class="row">
         <div class="col-xs-12">
-            <a href="/add_product">Adicionar produto</a>
+            <button type="button" class="btn btn-success"><a href="/add_product">Adicionar produto</a></button>
         </div>
         <div class="col-md-6">
             <table class="table">
@@ -23,7 +23,7 @@
                     {% for p in products %}
                     <tr>
                         <td>{{p.name}}</td>
-                        <td>{{p.price}}</td>
+                        <td>R$ {{p.price | replace(".", ",")}}</td>
                         <td>{{p.description}}</td>
                         <td>{{p.players}}</td>
                         <td>{{p.age}}</td>
@@ -38,7 +38,7 @@
         </div>
     </div>
     <div class="return">
-        <a href="/index">Voltar</a>
+        <button type="button" class="btn btn-dark"><a href="/index">Voltar</a></button>
     </div>
 </div>
 {% endblock %}
