adicionando a tabela de endereços

--- a/project/templates/consumer/add_consumer.html
+++ b/project/templates/consumer/add_consumer.html
@@ -13,6 +13,15 @@
         <div class="col-md-6">
             <input type="password" name="password" id="password" placeholder="Senha" class="form-control">
         </div>
+        <div class="col-md-6">
+            <input type="text" name="address" id="address" placeholder="Endereço" class="form-control">
+        </div>
+        <div class="col-md-6">
+            <input type="text" name="number" id="number" placeholder="Número" class="form-control">
+        </div>
+        <div class="col-md-6">
+            <input type="text" name="zipcode" id="zipcode" placeholder="CEP" class="form-control">
+        </div>
     </div>
     <br>
     <div class="row col-xs-12">
@@ -23,3 +32,4 @@
     <a href="/consumer">Voltar</a>
 </div>
 {% endblock %}
+
