--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,6 +3,19 @@
 
 {% block page_content %}
 <h1>Cadastro de Cliente e produto</h1>
+<h1>Olá,
+    {% if current_user.is_authenticated %}
+        {{current_user.username}}
+    {% else %}
+        Estranho
+    {% endif %}!</h1>
+{% if not known %}
+<p>Bem-vindo!</p>
+{% else %}
+<p>Happy to see you again!</p>
+{% endif %}
+</div>
+{% if current_user.is_authenticated %}
 <h5>Selecione uma opção:</h5>
 <div class="menu">
     <ul class="list-group">
@@ -10,6 +23,7 @@
         <li class="list-group-item"><a href="/product">Cadastrar Produto</a></li>
     </ul>
 </div>
+{% endif %}
 {% endblock %}
 
 
