fazendo o login funcionar com o formulario em html

--- a/app/templates/product/product.html
+++ b/app/templates/product/product.html
@@ -38,7 +38,7 @@
         </div>
     </div>
     <div class="return">
-        <button type="button" class="btn btn-dark"><a href="/index">Voltar</a></button>
+        <button type="button" class="btn btn-dark"><a href="/">Voltar</a></button>
     </div>
 </div>
 {% endblock %}
