--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
-{% import "bootstrap/wtf.html" as wtf %}
+<!--{% import "bootstrap/wtf.html" as wtf %}-->
 {% block title %}Cadastro Cliente{% endblock %}
 {% block page_content %}
 <div class="page-header">
     <h1 style="text-align: center;">Cadastrar novo cliente</h1>
 </div>
-<div class="col-md-4">
-    {{ wtf.quick_form(form) }}
-</div>
-<!--
+<!--<div class="col-md-4">-->
+{#{ wtf.quick_form(form) }#}
+<!--</div>-->
+
 <form action="/auth/register" class="container" method="post">
     <div class="row">
         <div class="col-md-6">
@@ -38,6 +38,5 @@
 <div class="return">
     <a href="/main">Voltar</a>
 </div>
--->
 {% endblock %}
 
