--- a/app/templates/product/edit_product.html
+++ b/app/templates/product/edit_product.html
@@ -11,7 +11,7 @@
             <input type="text" name="price" id="price" placeholder="Preço" class="form-control" value="{{ product.price }}" >
         </div>
         <div class="col-md-6">
-            <input type="text" name="description" id="description" placeholder="Descrição" class="form-control" value="{{ product.description }}" >
+            <textarea name="description" id="description" cols="75" rows="5" placeholder="Descrição"></textarea>
         </div>
         <div class="col-md-6">
             <input type="text" name="players" id="players" placeholder="Nº  jogadores" class="form-control" value="{{ product.players }}" >
@@ -19,11 +19,21 @@
         <div class="col-md-6">
             <input type="text" name="age" id="age" placeholder="Faixa etária" class="form-control" value="{{ product.age }}" >
         </div>
+        <div class="col-md-6">
+            <label for='theme'>Categoria</label>
+            <select name="theme",id="theme", class="form-control" >
+                {% for theme in themes %}
+              <option>{{theme.name}}</option>
+                {% endfor %}
+            </select>
+        </div>
     </div>
+    
     <br>
     <div class="row col-xs-12">
         <button type="submit" class="btn btn-block btn-success">Enviar</button>
     </div>
+
 </form>
 <div class="return">
     <a href="/product">Voltar</a>
