--- a/app/templates/product/add_product.html
+++ b/app/templates/product/add_product.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
 {% block title %}Produtos{% endblock %}
 {% block page_content %}
-<h1 style="text-align: center;">Cadastrar novo cliente</h1>
+<h1 style="text-align: center;">Cadastrar novo produto</h1>
+
 <form action="/add_product" class="container" method="post">
-    <div class="row">
+    <div class="form-group">
         <div class="col-md-6">
             <input type="text" name="name", id="name" placeholder="Nome" class="form-control">
         </div>
@@ -11,13 +12,21 @@
             <input type="text" name="price" id="price" placeholder="Preço" class="form-control">
         </div>
         <div class="col-md-6">
-            <input type="text" name="description" id="description" placeholder="Descrição" class="form-control">
+            <textarea name="description" id="description" cols="75" rows="5" placeholder="Descrição"></textarea>
         </div>
         <div class="col-md-6">
             <input type="text" name="players" id="players" placeholder="Nº  jogadores" class="form-control">
         </div>
         <div class="col-md-6">
             <input type="text" name="age" id="age" placeholder="Faixa etaria" class="form-control">
+        </div>
+        <div class="col-md-6">
+            <label for='theme'>Categoria</label>
+            <select name="theme",id="theme", class="form-control" >
+                {% for theme in themes %}
+              <option>{{theme.name}}</option>
+                {% endfor %}
+            </select>
         </div>
     </div>
     <br>
