--- a/app/templates/product/add_product.html
+++ b/app/templates/product/add_product.html
@@ -3,7 +3,7 @@
 {% block page_content %}
 <h1 style="text-align: center;">Cadastrar novo produto</h1>
 
-<form action="/add_product" class="container" method="post">
+<form action="/add_product" class="productAdd" method="post">
     <div class="form-group">
         <div class="col-md-6">
             <input type="text" name="name", id="name" placeholder="Nome" class="form-control">
@@ -12,12 +12,12 @@
             <input type="text" name="price" id="price" placeholder="Preço" class="form-control">
         </div>
         <div class="col-md-6">
-            <textarea name="description" id="description" cols="75" rows="5" placeholder="Descrição"></textarea>
+            <textarea name="description" id="description" cols="68" rows="5" placeholder="Descrição"></textarea>
         </div>
         <div class="col-md-6">
             <input type="text" name="players" id="players" placeholder="Nº  jogadores" class="form-control">
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 input">
             <input type="text" name="age" id="age" placeholder="Faixa etaria" class="form-control">
         </div>
         <div class="col-md-6">
