--- a/app/templates/product/edit_product.html
+++ b/app/templates/product/edit_product.html
@@ -2,7 +2,7 @@
 {% block title %}Produtos{% endblock %}
 {% block page_content %}
 <h1 style="text-align: center;">Editar {{ product.name }}</h1>
-<form action="/edit_product/{{ product.id }}" class="container" method="post">
+<form action="/edit_product/{{ product.id }}" class="productEdit" method="post">
     <div class="row">
         <div class="col-md-6">
             <input type="text" name="name", id="name" placeholder="Nome" class="form-control" value="{{ product.name }}">
@@ -11,7 +11,7 @@
             <input type="text" name="price" id="price" placeholder="Preço" class="form-control" value="{{ product.price }}" >
         </div>
         <div class="col-md-6">
-            <textarea name="description" id="description" cols="75" rows="5" placeholder="Descrição"></textarea>
+            <textarea name="description" id="description" cols="68" rows="5" placeholder="Descrição"></textarea>
         </div>
         <div class="col-md-6">
             <input type="text" name="players" id="players" placeholder="Nº  jogadores" class="form-control" value="{{ product.players }}" >
