--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -9,6 +9,11 @@
 
 .menu>ul>li{
     margin-top: 20px;
+    margin-left: 10px;
+}
+
+.selectOption{
+    margin-left: 10px;
 }
 
 .menu>ul>li>a{
@@ -24,6 +29,81 @@
     font-weight: normal;
     font-size: large;
     text-decoration: none;
+    color: red;
+}
+
+.consumerForm{
+    display: flex;
+    background-color: #FBFCF8;
+    border-radius: 3px;
+    padding: 1.8em;
+    align-content: space-around;
+}
+
+
+.destinyEdit{
+    display: flex;
+    background-color: #FBFCF8;
+    border-radius: 3px;
+    padding: 1.8em;
+    flex-direction: column;
+    align-content: space-around;
+
+}
+
+.consumerForm>div>div{
+    margin-bottom: 10px;
+}
+
+.destinyEdit>div{
+    margin: 10px;
+}
+
+.return>button{
+    border-color: blue;
+    color: blue;
+}
+
+.return>button:hover{
+    border-color: blue;
+    background-color: blue;
+    color: white;
+}
+
+
+.return>button>a{
     color: black;
 }
+
+.return>button>a:hover{
+    text-decoration: none;
+    color: white;
+}
+
+.productAdd{
+    display: flex;
+    background-color: #FBFCF8;
+    border-radius: 3px;
+    padding: 1.8em;
+    flex-direction: column;
+    align-content: space-between;
+}
+
+.productAdd>div>div{
+    margin-bottom: 10px;
+}
+
+.productEdit{
+    display: flex;
+    background-color: #FBFCF8;
+    border-radius: 3px;
+    padding: 1.8em;
+    flex-direction: column;
+    align-content: space-between;
+}
+
+.productEdit>div>div{
+    margin-bottom: 10px;
+}
+
 
