--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,11 +12,11 @@
 {% if not known %}
 <p>Bem-vindo!</p>
 {% else %}
-<p>Happy to see you again!</p>
+<p>Que bom ve-lo de novo!</p>
 {% endif %}
 </div>
 {% if current_user.is_authenticated %}
-<h5>Selecione uma opção:</h5>
+<h5 class="selectOption">Selecione uma opção:</h5>
 <div class="menu">
     <ul class="list-group">
         <li class="list-group-item"><a href="/consumer">Cadastrar Cliente</a></li>
