--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -8,7 +8,7 @@
     <h1>Login</h1>
     <div class="col-md-4">
     {{ wtf.quick_form(form) }}
-    <br>
+    <br><p>Esqueceu sua senha? <a href="{{ url_for('auth.password_reset_request') }}">Clique aqui para renova-la.</a>.</p>
     <p>É novo usuário? <a href="{{ url_for('auth.register') }}">Clique aqui para se cadastrar!</a>.</p>
 </div>
 </div>
@@ -31,7 +31,7 @@
         </div>
     </form>
     <br>
-    <p>New User? <a href="{{ url_for('auth.register') }}"> Click here to register </a></p>
+    <p>New User? <a href="{{ url_for('auth.register') }}"> Clique aqui para se cadastrar! </a></p>
 </div>
 -->
 {% endblock %}
