--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -40,3 +40,8 @@
 </div>
 {% endblock %}
 
+{% block scripts %}
+{{ super() }}
+<script src="{{ url_for('static', filename='js/main.js') }}"></script>
+{% endblock %}
+
