--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -29,6 +29,18 @@
         <div class="col-md-6">
             <input type="text" name="zipcode" id="zipcode" placeholder="CEP" class="form-control">
         </div>
+        <div class="col-md-6">
+            <input type="text" name="neighborhood" id="neighborhood" placeholder="Bairro" class="form-control">
+        </div>
+        <div class="col-md-6">
+            <input type="text" name="complement" id="complement" placeholder="Complemento" class="form-control">
+        </div>
+        <div class="col-md-6">
+            <input type="text" name="city" id="city" placeholder="Cidade" class="form-control">
+        </div>
+        <div class="col-md-6">
+            <input type="text" name="state" id="state" placeholder="Estado" class="form-control">
+        </div>
         <div class="col-md-2">
             <button type="submit" class="btn btn-block btn-success">Enviar</button>
         </div>
