--- a/app/templates/consumer/consumer.html
+++ b/app/templates/consumer/consumer.html
@@ -13,6 +13,10 @@
                         <th scope="col">Endereço</th>
                         <th scope="col">Número</th>
                         <th scope="col">CEP</th>
+                        <th scope="col">Bairro</th>
+                        <th scope="col">Complemento</th>
+                        <th scope="col">Cidade</th>
+                        <th scope="col">Estado</th>
                         <th scope="col">Ações</th>
                         
                     </tr>
@@ -25,6 +29,11 @@
                         <td scope="row">{{c.destiny.address}}</td>
                         <td scope="row">{{c.destiny.number}}</td>
                         <td scope="row">{{c.destiny.zipcode}}</td>
+                        <td scope="row">{{c.destiny.neighborhood}}</td>
+                        <td scope="row">{{c.destiny.complement}}</td>
+                        <td scope="row">{{c.destiny.city}}</td>
+                        <td scope="row">{{c.destiny.state}}</td>
+
                         <td>
                             <a href="/edit_consumer/{{c.id}}">Editar</a>
                             <a href="/delete_consumer/{{c.id}}">Excluir</a>
