--- a/app/templates/consumer/edit_destiny.html
+++ b/app/templates/consumer/edit_destiny.html
@@ -12,6 +12,18 @@
     <div class="col-md-6">
         <input type="text" name="zipcode" id="zipcode" placeholder="CEP" class="form-control" value="{{ consumer.destiny.zipcode }}">
     </div>
+    <div class="col-md-6">
+        <input type="text" name="neighborhood" id="neighborhood" placeholder="Bairro" class="form-control" value="{{ consumer.destiny.neighborhood }}">
+    </div>
+    <div class="col-md-6">
+        <input type="text" name="complement" id="complement" placeholder="Complemento" class="form-control" value="{{ consumer.destiny.complement }}"> 
+    </div>
+    <div class="col-md-6">
+        <input type="text" name="city" id="city" placeholder="Cidade" class="form-control" value="{{ consumer.destiny.city }}">
+    </div>
+    <div class="col-md-6">
+        <input type="text" name="state" id="state" placeholder="Estado" class="form-control" value="{{ consumer.destiny.state }}">
+    </div>
     <br>
     <div class="col-md-2">
         <button type="submit" class="btn btn-block btn-success btn">Enviar</button>
