--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -54,6 +54,7 @@
 
 {% block scripts %}
 {{ super() }}
+<script src="jquery-3.5.1.min.js"></script>
 <script src="{{ url_for('static', filename='js/main.js') }}"></script>
 {% endblock %}
 
