--- a/app/templates/auth/email/confirm.html
+++ b/app/templates/auth/email/confirm.html
@@ -1,4 +1,4 @@
-<p>Prezado {{ consumer.username }}</p>
+<p>Prezado {{ user.username }}</p>
 <p>Bem vindos ao Jogos Acme</p>
 
 <p>Para confirmar seu acesso: <a href="{{ url_for('auth.confirm', token=token, _external=True)}}">Clique aqui.</a> </p>
