--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -9,7 +9,7 @@
 {#{ wtf.quick_form(form) }#}
 <!--</div>-->
 
-<form action="/auth/register" id="consumerForm" class="consumerForm" method="post">
+<form action="/auth/register" id="registerForm" class="registerForm" method="post">
     <div class="row">
         <div class="col-md-6">
             <input type="text" name="username", id="username" placeholder="Nome" class="form-control">
