--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,7 +19,7 @@
 <h5 class="selectOption">Selecione uma opção:</h5>
 <div class="menu">
     <ul class="list-group">
-        <li class="list-group-item"><a href="/consumer">Cadastrar Cliente</a></li>
+        <li class="list-group-item"><a href="/user">Cadastrar Cliente</a></li>
         <li class="list-group-item"><a href="/product">Cadastrar Produto</a></li>
     </ul>
 </div>
