--- a/app/templates/auth/email/reset_password.html
+++ b/app/templates/auth/email/reset_password.html
@@ -1,4 +1,4 @@
-<p>Prezado {{ consumer.name }},</p>
+<p>Prezado {{ user.name }},</p>
 <p>Para renovar sua senha <a href="{{ url_for('auth.password_reset', token=token, _external=True) }}">Clique aqui</a></p>
 <p>Você também pode colar o seguinte link na barra de enderço de seu browser:</p>
 <p>{{ url_for('auth.password_reset', token=token, _external=True) }}</p>
