--- a/app/templates/product/product.html
+++ b/app/templates/product/product.html
@@ -7,7 +7,7 @@
         <div class="col-xs-12">
             <button type="button" class="btn btn-success"><a href="/add_product">Adicionar produto</a></button>
         </div>
-        <div class="mh-100" id="consumer_table">
+        <div class="mh-100" id="product_table">
             <table class="table table-striped w-auto">
                 <thead class="thead-dark">
                     <tr>
