--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -21,6 +21,12 @@
             <input type="password" name="password" id="password" placeholder="Senha" class="form-control">
         </div>
         <div class="col-md-6">
+            <input type="text" name="cpf" id="cpf" placeholder="CPF" class="form-control">
+        </div>
+        <div class="col-md-6">
+            <input type="text" name="telephone" id="telephone" placeholder="Telefone" class="form-control">
+        </div>
+        <div class="col-md-6">
             <input type="text" name="address" id="address" placeholder="Endereço" class="form-control">
         </div>
         <div class="col-md-6">
