--- a/app/templates/user/user.html
+++ b/app/templates/user/user.html
@@ -9,6 +9,7 @@
                 <thead class="thead-dark">
                     <tr>
                         <th scope="col">Nome</th>
+                        <th scope="col">Role</th>
                         <th scope="col">E-mail</th>
                         <th scope="col">Endereço</th>
                         <th scope="col">Número</th>
@@ -25,6 +26,7 @@
                     {% for u in users %}
                     <tr>
                         <td scope="row">{{u.username}}</td>
+                        <td scope="row">{{u.role.name}}</td>
                         <td scope="row">{{u.email}}</td>
                         <td scope="row">{{u.destiny.address}}</td>
                         <td scope="row">{{u.destiny.number}}</td>
