--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -61,5 +61,8 @@
         {% block page_content %}{% endblock %}
     </div>
     {% endblock %}
-
+    {% block scripts %}
+    {{ super() }}
+    {{ moment.include_moment() }}
+    {% endblock %}
 </html>
