--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -5,11 +5,11 @@
 {% block page_content %}
 <div class="page-header">
     <h1>{{ user.username }}</h1>
-    {% if user.name or user.location %}
+    {% if user.username or user.destiny.address %}
     <p>
-        {% if user.name %}{{ user.name }}{% endif %}
-        {% if user.location %}
-            from <a href="http://maps.google.com/?q={{ user.location }}">{{ user.location }}</a>
+        {% if user.username %}{{ user.username }}{% endif %}
+        {% if user.destiny.address %}
+            from <p>{{ user.destiny.address}}</p>
         {% endif %}
     </p>
     {% endif %}
@@ -17,6 +17,6 @@
     <p><a href="mailto:{{ user.email }}">{{ user.email }}</a></p>
     {% endif %}
     {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
-    <p>Member since {{ moment(user.member_since).format('L') }}. Last seen {{ moment(user.last_seen).fromNow() }}.</p>
+    <p>Membro desde: {{ moment(user.member_since).format('L') }}. Última visita: {{ moment(user.last_seen).fromNow() }}.</p>
 </div>
 {% endblock %}
