--- a/app/templates/user/user.html
+++ b/app/templates/user/user.html
@@ -5,30 +5,21 @@
 {% block page_content %}
 <div class="page-header">
     <h1>{{ user.username }}</h1>
+    {% if current_user.is_administrator() %} <h4>Hello Boss</h4> {% endif %}
     {% if user.username or user.destiny.address %}
-    {% if current_user.is_administrator() %}
-    <h4>Hello Boss</h4>
+    <div class="user_info">
+        <p>Seu nome de usuário: {% if user.username %}{{ user.username }} {% endif %}</p>
+        <p>Seu endereço: {% if user.destiny.address %} {{ user.destiny.address}} {% endif %}</p>
+        <p>Seu email: {% if user.email %} {{ user.email }} {% endif %}</p>
+        <p>Membro desde: {{ moment(user.member_since).format('L') }}. Última visita: {{ moment(user.last_seen).fromNow() }}.</p>
+    </div>
     {% endif %}
-    <p>
-        {% if user.username %}{{ user.username }}{% endif %}
-        {% if user.destiny.address %}
-            from <p>{{ user.destiny.address}}</p>
-        {% endif %}
-    </p>
-    {% endif %}
-    {% if current_user.is_administrator %}
-    <p><a href="mailto:{{ user.email }}">{{ user.email }}</a></p>
-    {% endif %}
-    {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
-    <p>Membro desde: {{ moment(user.member_since).format('L') }}. Última visita: {{ moment(user.last_seen).fromNow() }}.</p>
-    <p>
-        {% if user == current_user %}
-        <a class="btn btn-default" href="{{ url_for('.edit_profile') }}">Mudar perfil</a>
-        {% endif %}
+    <div class="user_edtion_option">
         {% if current_user.is_administrator() %}
-        <a class="btn btn-danger" href="{{ url_for('.edit_profile_admin', id=user.id) }}">Edit Profile [Admin]</a>
+        <a class="btn btn-danger" href="{{ url_for('.edit_profile_admin', id=user.id) }}">Editar perfil [Admin]</a>
+        {% else %}
+        <a class="btn btn-default" href="{{ url_for('.edit_profile') }}">Editar perfil</a>
         {% endif %}
-    </p>
+    </div>
 </div>
-
 {% endblock %}
