adicionando os modulos para cadastrar categoria tema e marca

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,8 +19,10 @@
 <h5 class="selectOption">Selecione uma opção:</h5>
 <div class="menu">
     <ul class="list-group">
-        <li class="list-group-item"><a href="/user">Ver clientes</a></li>
-        <li class="list-group-item"><a href="/product">Cadastrar Produto</a></li>
+        <li class="list-group-item"><a href="/products">Cadastrar produto</a></li>
+        <li class="list-group-item"><a href="/themes">Cadastrar tema</a></li>
+        <li class="list-group-item"><a href="/brands">Cadastrar marca</a></li>
+        <li class="list-group-item"><a href="/categories">Cadastrar categoria</a></li>
     </ul>
 </div>
 {% endif %}
