--- a/app/templates/products/products.html
+++ b/app/templates/products/products.html
@@ -5,7 +5,7 @@
 <div class="container">
     <div class="row">
         <div class="col-xs-12">
-            <button type="button" class="btn btn-success"><a href="/add_product">Adicionar produto</a></button>
+            <button type="button" class="btn btn-success"><a href="/add_products">Adicionar produto</a></button>
         </div>
         <div class="mh-100" id="product_table">
             <table class="table table-striped w-auto">
