--- a/app/templates/products/add_products.html
+++ b/app/templates/products/add_products.html
@@ -1,23 +1,24 @@
 {% extends "base.html" %}
 {% block title %}Produtos{% endblock %}
 {% block page_content %}
-<h1 style="text-align: center;">Editar {{ product.name }}</h1>
-<form action="/edit_product/{{ product.id }}" class="productEdit" method="post">
-    <div class="row">
+<h1 style="text-align: center;">Cadastrar novo produto</h1>
+
+<form action="/add_products" class="productAdd" method="post">
+    <div class="form-group">
         <div class="col-md-6">
-            <input type="text" name="name", id="name" placeholder="Nome" class="form-control" value="{{ product.name }}">
+            <input type="text" name="name", id="name" placeholder="Nome" class="form-control">
         </div>
         <div class="col-md-6">
-            <input type="text" name="price" id="price" placeholder="Preço" class="form-control" value="{{ product.price }}" >
+            <input type="text" name="price" id="price" placeholder="Preço" class="form-control">
         </div>
         <div class="col-md-6">
             <textarea name="description" id="description" cols="68" rows="5" placeholder="Descrição"></textarea>
         </div>
         <div class="col-md-6">
-            <input type="text" name="players" id="players" placeholder="Nº  jogadores" class="form-control" value="{{ product.players }}" >
+            <input type="text" name="players" id="players" placeholder="Nº  jogadores" class="form-control">
         </div>
-        <div class="col-md-6">
-            <input type="text" name="age" id="age" placeholder="Faixa etária" class="form-control" value="{{ product.age }}" >
+        <div class="col-md-6 input">
+            <input type="text" name="age" id="age" placeholder="Faixa etaria" class="form-control">
         </div>
         <div class="col-md-6">
             <label for='theme'>Categoria</label>
@@ -28,14 +29,12 @@
             </select>
         </div>
     </div>
-    
     <br>
     <div class="row col-xs-12">
         <button type="submit" class="btn btn-block btn-success">Enviar</button>
     </div>
-
 </form>
 <div class="return">
-    <a href="/product">Voltar</a>
+    <a href="/products">Voltar</a>
 </div>
 {% endblock %}
