--- a/app/templates/products/products.html
+++ b/app/templates/products/products.html
@@ -30,8 +30,8 @@
                         <td>{{p.age}}</td>
                         <td>{{p.theme.name}}</td>
                         <td>
-                            <a href="/edit_product/{{p.id}}">Editar</a>
-                            <a href="/delete_product/{{p.id}}">Excluir</a>
+                            <a href="/edit_products/{{p.id}}">Editar</a>
+                            <a href="/delete_products/{{p.id}}">Excluir</a>
                         </td>
                     </tr>
                     {% endfor %}
