--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -27,7 +27,10 @@
                 <ul class="nav navbar-nav">
                     <li><a href="{{ url_for('main.index')}}">Home</a></li>
                     {% if current_user.is_authenticated %}
-                    <li><a href="{{ url_for('main.user', username=current_user.username) }}">Profile</a></li>
+                    <li><a href="{{ url_for('main.user', username=current_user.username) }}">Perfil</a></li>
+                    {% endif %}
+                    {% if current_user.is_authenticated and current_user.is_administrator() %}
+                    <li><a href="{{ url_for('products.product_selection')}}">Produtos</a></li>
                     {% endif %}
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
