--- a/app/templates/products/add_themes.html
+++ b/app/templates/products/add_themes.html
@@ -1,20 +1,25 @@
 {% extends "base.html" %}
+{% import "bootstrap/wtf.html" as wtf %}
 {% block title %}Temas{% endblock %}
 {% block page_content %}
 <h1 style="text-align: center;">Cadastrar novo tema</h1>
 
-<form action="/add_themes" class="themeAdd" method="post">
-    <div class="form-group">
-        <div class="col-md-6">
-            <input type="text" name="name", id="name" placeholder="Nome" class="form-control">
-        </div>
-    </div>
-    <br>
-    <div class="row col-xs-12">
-        <button type="submit" class="btn btn-block btn-success">Enviar</button>
-    </div>
-</form>
-<div class="return">
-    <a href="/themes">Voltar</a>
+<div class="col-md-4">
+    {{ wtf.quick_form(form) }}
+    <button type="button" class="btn btn-dark"><a href="/brands">Voltar</a></button>
 </div>
+<!--<form action="/add_themes" class="themeAdd" method="post">-->
+<!--    <div class="form-group">-->
+<!--        <div class="col-md-6">-->
+<!--            <input type="text" name="name", id="name" placeholder="Nome" class="form-control">-->
+<!--        </div>-->
+<!--    </div>-->
+<!--    <br>-->
+<!--    <div class="row col-xs-12">-->
+<!--        <button type="submit" class="btn btn-block btn-success">Enviar</button>-->
+<!--    </div>-->
+<!--</form>-->
+<!--<div class="return">-->
+<!--    <a href="/themes">Voltar</a>-->
+<!--</div>-->
 {% endblock %}
