--- a/app/templates/products/products.html
+++ b/app/templates/products/products.html
@@ -40,7 +40,7 @@
         </div>
     </div>
     <div class="return">
-        <button type="button" class="btn btn-dark"><a href="/">Voltar</a></button>
+        <button type="button" class="btn btn-dark"><a href="{{ url_for('products.product_selection')}}">Voltar</a></button>
     </div>
 </div>
 {% endblock %}
