--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -36,7 +36,9 @@
                 <ul class="nav navbar-nav navbar-right">
                     {% if current_user.is_authenticated %}
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Conta<b class="caret"></b></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            <img src="{{ current_user.gravatar(size=18) }}">
+                            Conta<b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="{{ url_for('auth.change_password') }}">Mudar senha</a></li>
                             <li><a href="{{ url_for('auth.change_email_request') }}">Mudar email</a></li>
