--- a/app/templates/products/products.html
+++ b/app/templates/products/products.html
@@ -13,11 +13,15 @@
                     <tr>
                         <th>Nome</th>
                         <th>Preço</th>
+                        <th>Marca</th>
+                        <th>Categoria</th>
                         <th>Descrição</th>
                         <th>Número de jogadores</th>
                         <th>Faixa etária</th>
                         <th>Tema</th>
-                        <th>Ações</th>
+                        <th>Imagem</th>
+                        <th>Editar</th>
+                        <th>Excluir</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -25,13 +29,18 @@
                     <tr>
                         <td>{{p.name}}</td>
                         <td>R$ {{p.price | replace(".", ",")}}</td>
+                        <td>{{p.brand.name}}</td>
+                        <td>{{p.category.name}}</td>
                         <td>{{p.description}}</td>
                         <td>{{p.players}}</td>
                         <td>{{p.age}}</td>
                         <td>{{p.theme.name}}</td>
+                        <td><img class="productImg" src="{{ url_for('static', filename='images/' + p.image) }}"></td>
                         <td>
-                            <a href="/edit_products/{{p.id}}">Editar</a>
-                            <a href="/delete_products/{{p.id}}">Excluir</a>
+                            <a href="/edit_products/{{p.id}}"><img src="{{ url_for('static', filename='images/edit.png') }}" alt="editar"></a>
+                        </td>
+                        <td>
+                            <a href="/delete_products/{{p.id}}"><img src="{{ url_for('static', filename='images/trash.png') }}" alt="excluir"></a>
                         </td>
                     </tr>
                     {% endfor %}
