--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -118,12 +118,13 @@
 }
 
 button#backButtonProducts{
-    margin-left: 10px;
     margin-bottom: 10px;
+    margin-top: 20px
 }
 
 button#addButtonProducts{
-    margin-right: 40px;
+    margin-right: 50px;
+    margin-top:20px;
     margin-bottom: 10px;
 }
 
