--- a/app/templates/products/add_brands.html
+++ b/app/templates/products/add_brands.html
@@ -6,7 +6,7 @@
 
 <div class="col-md-4">
     {{ wtf.quick_form(form) }}
-    <button type="button" class="btn btn-dark"><a href="/brands">Voltar</a></button>
+    <button id="backButtonProducts" type="button" class="btn btn-dark"><a href="/brands">Voltar</a></button>
 </div>
 
 <!--<form action="/add_brands" class="brandAdd" method="post">-->
