--- a/app/templates/products/add_products.html
+++ b/app/templates/products/add_products.html
@@ -6,7 +6,7 @@
 
 <div class="col-md-4">
     {{ wtf.quick_form(form) }}
-    <button type="button" class="btn btn-dark"><a href="/products">Voltar</a></button>
+    <button id="backButtonProducts" type="button" class="btn btn-dark"><a href="/products">Voltar</a></button>
 </div>
 
 <!--<form action="/add_products" class="productAdd" method="post">-->
